Fixed horizontal scrolling issue

--- a/src/styleSheets/App.css
+++ b/src/styleSheets/App.css
@@ -212,7 +212,7 @@
         height: 100%;
         background-color: white;
         top: 0;
-        padding: 1rem 3rem;
+        padding: 1rem 1.8rem;
         animation-name: slide-in;
         animation-duration: 1s;
     }
