--- a/src/styleSheets/Shop.css
+++ b/src/styleSheets/Shop.css
@@ -151,7 +151,6 @@
         width: 90vw;
         height: 10rem;
         padding: 0.5rem;
-        margin: 1rem 1.3rem;
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         
     
