--- a/src/styleSheets/footer.css
+++ b/src/styleSheets/footer.css
@@ -1,6 +1,5 @@
 .footerDiv{
     background-color: #082f49;
-    width: 100%;
 }
 
 .footerContents > div > p{
