--- a/src/styleSheets/index.css
+++ b/src/styleSheets/index.css
@@ -8,6 +8,7 @@
 }
 
 body{
+    box-sizing: border-box;
     height: 100;
     width: 100;
 }
